--- a/omdb-app/index.html
+++ b/omdb-app/index.html
@@ -5,7 +5,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" charset="utf-8" defer></script>
     <script src="app.js" charset="utf-8" defer></script>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Kanit:800|Roboto:900|Rock+Salt&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alex+Brush|Kanit:800|Roboto:900|Rock+Salt&display=swap" rel="stylesheet">
     <title></title>
   </head>
   <body>
@@ -32,6 +32,10 @@
       </div>
 
       <div class="quote">
+        <div class="quote-background" id="one">"</div>
+        <div class="quote-background" id="two">"</div>
+        <!-- <p>"</p>
+        <p>"</p> -->
       </div>
 
     </div>
