--- a/omdb-app/index.html
+++ b/omdb-app/index.html
@@ -31,13 +31,16 @@
       <div class="info">
       </div>
 
-      <div class="quote">
+      <div class="quote-container">
         <div class="quote-background" id="one">"</div>
         <div class="quote-background" id="two">"</div>
-        <!-- <p>"</p>
-        <p>"</p> -->
+        <div class="quote">
+          <p class="random-quote"></p>
+        </div>
       </div>
-
+      <div class="quote-button">
+        <button>McClane-ables</button>
+      </div>
     </div>
   </body>
 </html>
