button kind of working

--- a/omdb-app/index.html
+++ b/omdb-app/index.html
@@ -34,12 +34,15 @@
       <div class="quote-container">
         <div class="quote-background" id="one">"</div>
         <div class="quote-background" id="two">"</div>
-        <div class="quote">
+        <div class="quote-text">
           <p class="random-quote"></p>
         </div>
       </div>
-      <div class="quote-button">
-        <button>McClane-ables</button>
+      <div class="quote-button-container">
+        <button class="button">
+          <p class="button-text">McClane-ables</p>
+        </button>
+
       </div>
     </div>
   </body>
