button working beautifully

--- a/omdb-app/index.html
+++ b/omdb-app/index.html
@@ -33,17 +33,10 @@
 
       <div class="quote-container">
         <div class="quote-background" id="one">"</div>
+        <div class="middle"></div>
         <div class="quote-background" id="two">"</div>
-        <div class="quote-text">
-          <p class="random-quote"></p>
-        </div>
       </div>
-      <div class="quote-button-container">
-        <button class="button">
-          <p class="button-text">McClane-ables</p>
-        </button>
 
-      </div>
     </div>
   </body>
 </html>
