API info is populating

--- a/omdb-app/index.html
+++ b/omdb-app/index.html
@@ -27,10 +27,24 @@
         </div>
         <div class="carousel-button next">></div>
       </div>
-
-      <div class="info">
-      </div>
-
+    <div id='info'>
+      <dl id='first'>
+        <!-- <dt>Title</dt> -->
+          <dd id='title'></dd>
+      </dl>
+      <dl id='second'>
+        <!-- <dt>Plot</dt> -->
+          <dd id='plot'></dd>
+      </dl>
+    </div>
+    <dl id='third'>
+      <dt>Runtime:</dt>
+        <dd id='run-time'></dd>
+      <dt>Release Date:</dt>
+        <dd id='release-date'></dd>
+      <dt>Rating:</dt>
+        <dd id='rating'></dd>
+    </dl>
       <div class="quote-container">
         <div class="quote-background" id="one">"</div>
         <div class="middle"></div>
