API buttons set up

--- a/omdb-app/index.html
+++ b/omdb-app/index.html
@@ -38,11 +38,11 @@
       </dl>
     </div>
     <dl id='third'>
-      <dt>Runtime:</dt>
+      <dt class="invisible">Runtime:</dt>
         <dd id='run-time'></dd>
-      <dt>Release Date:</dt>
+      <dt class="invisible">Release Date:</dt>
         <dd id='release-date'></dd>
-      <dt>Rating:</dt>
+      <dt class="invisible">Rating:</dt>
         <dd id='rating'></dd>
     </dl>
       <div class="quote-container">
