--- a/omdb-app/index.html
+++ b/omdb-app/index.html
@@ -11,6 +11,10 @@
   <body>
     <div class="container">
 
+      <div class="header">
+
+      </div>
+
       <div class="title">
         <h2>Get ready to...</h2>
         <h1>DIE HARD</h1>
