--- a/omdb-app/index.html
+++ b/omdb-app/index.html
@@ -49,6 +49,11 @@
       <dt class="invisible">Rating:</dt>
         <dd id='rating'></dd>
     </dl>
+
+    <div class="info-buttons">
+
+    </div>
+
       <div class="quote-container">
         <div class="quote-background" id="one">"</div>
         <div class="middle"></div>
