--- a/omdb-app/index.html
+++ b/omdb-app/index.html
@@ -9,6 +9,16 @@
     <title></title>
   </head>
   <body>
+
+    <div id="modal">
+      <div id="modal-textbox">
+        <p>John McClane Fans ONLY!</p>
+      <div id="modal-footer">
+        <div class="modal-button">>>> click to enter <<<</div>
+      </div>
+      </div>
+    </div>
+
     <div class="container">
 
       <div class="header">
