funko pic added pics updated

--- a/omdb-app/index.html
+++ b/omdb-app/index.html
@@ -13,9 +13,8 @@
     <div id="modal">
       <div id="modal-textbox">
         <p>John McClane Fans ONLY!</p>
-      <div id="modal-footer">
+        <img class='funko'src='./images/john_mcclane.jpg' alt='John McClane Funko'>
         <div class="modal-button">>>> click to enter <<<</div>
-      </div>
       </div>
     </div>
 
@@ -33,21 +32,19 @@
       <div class="carousel-container">
         <div class="carousel-button previous"><</div>
         <div class="carousel-images">
-          <img src="https://m.media-amazon.com/images/M/MV5BZjRlNDUxZjAtOGQ4OC00OTNlLTgxNmQtYTBmMDgwZmNmNjkxXkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_SY1000_CR0,0,666,1000_AL_.jpg" alt="Die Hard movie poster">
-          <img src="https://m.media-amazon.com/images/M/MV5BMzMzYzk3ZTEtZDg0My00MTY5LWE3ZmQtYzNhYjhjN2RhZGRjL2ltYWdlXkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_SY1000_CR0,0,675,1000_AL_.jpg" alt="Die Hard 2 movie poster">
-          <img src="https://m.media-amazon.com/images/M/MV5BZjI0ZWFiMmQtMjRlZi00ZmFhLWI4NmYtMjQ5YmY0MzIyMzRiXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_SY1000_SX670_AL_.jpg" alt="Die Hard 3 movie poster">
-          <img src="https://m.media-amazon.com/images/M/MV5BNDQxMDE1OTg4NV5BMl5BanBnXkFtZTcwMTMzOTQzMw@@._V1_SY1000_CR0,0,679,1000_AL_.jpg" alt="Die Hard 4 movie poster">
-          <img src="https://m.media-amazon.com/images/M/MV5BMTcwNzgyNzUzOV5BMl5BanBnXkFtZTcwMzAwOTA5OA@@._V1_.jpg" alt="Die Hard 5 movie poster">
+          <img src="./images/die_hard_1.jpg" alt="Die Hard movie poster">
+          <img src="./images/die_hard_2.jpg" alt="Die Hard 2 movie poster">
+          <img src="./images/die_hard_3.jpg" alt="Die Hard 3 movie poster">
+          <img src="./images/die_hard_4.jpg" alt="Die Hard 4 movie poster">
+          <img src="./images/die_hard_5.jpg" alt="Die Hard 5 movie poster">
         </div>
         <div class="carousel-button next">></div>
       </div>
     <div id='info'>
       <dl id='first'>
-        <!-- <dt>Title</dt> -->
           <dd id='title'></dd>
       </dl>
       <dl id='second'>
-        <!-- <dt>Plot</dt> -->
           <dd id='plot'></dd>
       </dl>
     </div>
