marquee modal button and blinking until clicked movie info buttons

--- a/omdb-app/index.html
+++ b/omdb-app/index.html
@@ -14,7 +14,7 @@
       <div id="modal-textbox">
         <p>John McClane Fans ONLY!</p>
         <img class='funko'src='./images/john_mcclane.jpg' alt='John McClane Funko'>
-        <div class="modal-button">>>> click to enter <<<</div>
+        <marquee class="modal-button" >>>> click to enter <<<</marquee>
       </div>
     </div>
 
