header buttons the scroll to section

--- a/omdb-app/index.html
+++ b/omdb-app/index.html
@@ -21,7 +21,8 @@
     <div class="container">
 
       <div class="header">
-
+        <a class="header-button" href="#quote-section">McClane-ables Quote Generator</a>
+        <a class="header-button" href="#game-section">Rock, Paper, Scissors, Machine Gun</a>
       </div>
 
       <div class="title">
@@ -58,14 +59,15 @@
     </dl>
 
     <div class="info-buttons">
-
     </div>
 
-      <div class="quote-container">
+      <div class="quote-container" id="quote-section">
         <div class="quote-background" id="one">"</div>
         <div class="middle"></div>
         <div class="quote-background" id="two">"</div>
       </div>
+
+      <div class="game-container" id="game-section">
 
     </div>
   </body>
