game html and css in progress

--- a/omdb-app/index.html
+++ b/omdb-app/index.html
@@ -67,8 +67,21 @@
         <div class="quote-background" id="two">"</div>
       </div>
 
+      <div class="quote-button-container">
+      </div>
+      <div class="game-title">Rock, Paper, Scissors...Machine Gun!</div>
       <div class="game-container" id="game-section">
-
+        <div class="player-choices" id="hans">
+          <img id='john-pic'src='./images/john_mcclane2.jpg' alt='John McClane Funko'>
+        </div>
+        <div class="game-outcome">
+          <p></p>
+          <button id="draw-button">Rock, Paper, Scissors...THROW!</button>
+        </div>
+        <div class="player-choices" id="john">
+          <img id='hans-pic'src='./images/hans_gruber.jpg' alt='Hans Gruber Funko'>
+        </div>
     </div>
+  </div>
   </body>
 </html>
