RPSMG working with button

--- a/omdb-app/index.html
+++ b/omdb-app/index.html
@@ -71,14 +71,16 @@
       </div>
       <div class="game-title">Rock, Paper, Scissors...Machine Gun!</div>
       <div class="game-container" id="game-section">
-        <div class="player-choices" id="hans">
+        <div class="player-choices" id="john">
+          <p class="johns-throw"></p>
           <img id='john-pic'src='./images/john_mcclane2.jpg' alt='John McClane Funko'>
         </div>
         <div class="game-outcome">
           <p></p>
           <button id="draw-button">Rock, Paper, Scissors...THROW!</button>
         </div>
-        <div class="player-choices" id="john">
+        <div class="player-choices" id="hans">
+          <p class="hans-throw"></p>
           <img id='hans-pic'src='./images/hans_gruber.jpg' alt='Hans Gruber Funko'>
         </div>
     </div>
