final version project 1 complete

--- a/omdb-app/index.html
+++ b/omdb-app/index.html
@@ -5,8 +5,9 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" charset="utf-8" defer></script>
     <script src="app.js" charset="utf-8" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" sizes="16x16" href="./images/favicon.jpg">
     <link href="https://fonts.googleapis.com/css?family=Alex+Brush|Kanit:800|Roboto:900|Rock+Salt&display=swap" rel="stylesheet">
-    <title></title>
+    <title>Die Hard Fan Page</title>
   </head>
   <body>
 
@@ -42,26 +43,25 @@
         </div>
         <div class="carousel-button next">></div>
       </div>
-      <div id="info-section"></div>
-    <div id='info'>
-      <dl id='first'>
-          <dd id='title'></dd>
-      </dl>
-      <dl id='second'>
-          <dd id='plot'></dd>
-      </dl>
-    </div>
-    <dl id='third'>
-      <dt class="invisible">Runtime:</dt>
-        <dd id='run-time'></dd>
-      <dt class="invisible">Release Date:</dt>
-        <dd id='release-date'></dd>
-      <dt class="invisible">Rating:</dt>
-        <dd id='rating'></dd>
-    </dl>
 
-    <div class="info-buttons">
-    </div>
+      <div id="info-section"></div>
+        <div id='info'>
+          <dl id='first'>
+            <dd id='title'></dd>
+          </dl>
+          <dl id='second'>
+            <dd id='plot'></dd>
+          </dl>
+        </div>
+          <dl id='third'>
+            <dt class="invisible">Runtime:</dt>
+              <dd id='run-time'></dd>
+            <dt class="invisible">Release Date:</dt>
+              <dd id='release-date'></dd>
+            <dt class="invisible">Rating:</dt>
+              <dd id='rating'></dd>
+          </dl>
+      <div class="info-buttons"></div>
 
       <div id="quote-section">
         <h4>McClane-ables Quote Generator</h4>
@@ -72,8 +72,7 @@
         <div class="middle"></div>
         <div class="quote-background" id="two">"</div>
       </div>
-      <div class="quote-button-container">
-      </div>
+      <div class="quote-button-container"></div>
 
       <div class="game-title" id="game-section">
         <h4>Rock, Paper, Scissors...Machine Gun!</h4>
@@ -91,7 +90,8 @@
           <img id='hans-pic'src='./images/hans_gruber.jpg' alt='Hans Gruber Funko'>
           <h3 class="hans-throw"></h3>
         </div>
+      </div>
+
     </div>
-  </div>
   </body>
 </html>
