--- a/goblins/index.html
+++ b/goblins/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <link rel="icon" sizes="16x16" href="./images/goblin-favicon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" charset="utf-8" defer></script>
     <script src="script.js" charset="utf-8" defer></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
-    <link rel="stylesheet" href="style.css">
     <title></title>
   </head>
   <body>
@@ -27,7 +27,7 @@
     <div class="step-two-button">
     </div>
     <div class="step-three">
-      <h6>STEP THREE: Then you start from the beginning of the line and go over them a second time, removing the cure for every second Goblin, starting with the second Goblin. Then you do it a third time for every third Goblin, starting at the third Goblin: if the Goblin you now administer was previously cured, they are now uncured, and if the Goblin was uncured, they are now cured. You do it a fourth time, and go to every fourth Goblin starting with the fourth. The fifth time, you go to every fifth Goblin starting with the fifth...after you have gone down the line of Goblins 100 times, which Goblins are cured at the end?</h6>
+      <p>STEP THREE: Then you start from the beginning of the line and go over them a second time, removing the cure for every second Goblin, starting with the second Goblin. Then you do it a third time for every third Goblin, starting at the third Goblin: if the Goblin you now administer was previously cured, they are now uncured, and if the Goblin was uncured, they are now cured. You do it a fourth time, and go to every fourth Goblin starting with the fourth. The fifth time, you go to every fifth Goblin starting with the fifth...after you have gone down the line of Goblins 100 times, which Goblins are cured at the end?</p>
     </div>
     <div class="step-three-button">
     </div>
